[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/player/tux/fireball/fireball.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Fireball.gd" type="Script" id=2]
[ext_resource path="res://images/enemies/flame/flame-1.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/flame/flame-0.png" type="Texture" id=4]

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Glow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0519088, 0.1, 0.151909 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "dissipate"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.72549, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2.21914, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Fireball" type="KinematicBody2D" groups=["fireballs"]]
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 4 )
anims/dissipate = SubResource( 7 )

[node name="Flash" type="Control" parent="."]
visible = false
rect_scale = Vector2( 0.8, 0.8 )

[node name="Glow" type="AnimatedSprite" parent="Flash"]
material = SubResource( 5 )
z_index = 4096
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, -2 )

[node name="Glow2" type="AnimatedSprite" parent="Flash"]
material = SubResource( 5 )
scale = Vector2( 2, 2 )
z_index = 4096
frames = SubResource( 6 )
frame = 1
playing = true
offset = Vector2( 0, -2 )

[node name="Glow3" type="AnimatedSprite" parent="Flash"]
material = SubResource( 5 )
scale = Vector2( 4, 4 )
z_index = 4096
frames = SubResource( 6 )
frame = 1
playing = true
offset = Vector2( 0, -2 )

[node name="Glow4" type="AnimatedSprite" parent="Flash"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 5 )
scale = Vector2( 4, 4 )
z_index = 4096
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, -2 )

[node name="Control" type="Control" parent="."]

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 1 )

[node name="Glow" type="Sprite" parent="Control"]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Glow2" type="AnimatedSprite" parent="Control"]
modulate = Color( 1, 0, 0, 0.541176 )
material = SubResource( 5 )
scale = Vector2( 2, 2 )
z_index = 1
frames = SubResource( 6 )
frame = 1
playing = true
offset = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="EnemyKill" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 69

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyKill"]
shape = SubResource( 3 )

[node name="DestroyTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -16, -16, 32, 32 )

[connection signal="body_entered" from="EnemyKill" to="." method="_on_EnemyKill_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
